src/test/deca/context/valid/ContextSansObjet/OperationsBooleennes/Or.deca
//Description :
//	Vérification contextuelle de l'opérateur ||
//
//Résultats :
//	ok

{
    boolean x = true;
    boolean y = true || x;
}