src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/Or_Int.deca
//Description :
//	Vérification contextuelle de la sortie de l'opérateur || (différente de int)
//
//Résultats :
//	Erreur Contextuelle
//  Ligne 10 : type incompatible

{
    boolean x = true;
    int y = x || false;
}